kubernetes/traefik/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: traefik
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: admin
          containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --configfile=/config/traefik.toml
        - --logLevel=INFO
        volumeMounts:
        - mountPath: /ssl
          name: letsencrypt-ssl
        - mountPath: /config
          name: traefik-config
      volumes:
      - name: letsencrypt-ssl
        secret:
          secretName: letsencrypt-secret
      - name: traefik-config
        configMap:
          name: traefik-configmap
