kubernetes/traefik/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    #traefik.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/24, 10.8.0.0/24"
spec:
  rules:
  - host: traefik.in.my_domain.fr
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
