kubernetes/traefik/web-ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  type: NodePort
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    #traefik.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/24, 10.8.0.0/24"
spec:
  rules:
  - host: traefik.in.my_domain.fr
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
